# kast

./: .gitignore  0_copilot.txt  AGENTS.md  LICENSE  Makefile  PLAN-resolve.md  PLAN.md  README.md  UBIQUITOUS_LANGUAGE.md  bench-plan.md  build.gradle.kts  build.sh  cli-plan.md  copilot-session-7594bd77-995a-49c0-80e7-5608b915770a.html  copilot-session-7594bd77-995a-49c0-80e7-5608b915770a.md  current.md  demo.sh  desired.md  devin.md  end-goal.md  finalPlan.md  gradle.properties  indexing-plan.md  input.md  install.sh  kast-demo-spec.md  kast-lifecycle-findings.txt  kast-lsp-pivot.md  kast.sh  notes.txt  plan.md  planned.md  prospective-fixes.md  release.sh  response.md  settings.gradle.kts  skills-lock.json  smoke.sh  tmp.sh  updated_plan.md  (+4 more)
cli-rs/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  requirements-docs.txt  zensical.toml
cli-rs/docs/: AGENTS.md  index.md
cli-rs/examples/: format_impact_report.rs
cli-rs/protocol/: AGENTS.md  api-reference.md  api-specification.md  capabilities.md  openapi.yaml
cli-rs/src/: AGENTS.md  agent.rs  backend.rs  bundle.rs  catalog_schema.rs  cli.rs  codex.rs  config.rs  contract_gen.rs  daemon.rs  demo.rs  devin_runtime.rs  error.rs  install.rs  interaction.rs  local_development.rs  lsp.rs  machine.rs  main.rs  manifest.rs  metrics.rs  metrics_database.rs  onboarding.rs  orchestration.rs  output.rs  package.rs  protocol_schema_versions.rs  rpc.rs  runtime.rs  self_mgmt.rs  source_index_db.rs  source_index_schema.rs  symbol_query.rs  symbol_query_filters.rs  validate.rs  workspace_inventory.rs
cli-rs/tests/: AGENTS.md  agent_command_surface_smoke.rs  agent_diagnostics_smoke.rs  agent_operation_surface_smoke.rs  cli_core_smoke.rs  (+38 more)
(+2876 files in other folders)
