[package]
name = "kast"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
glob = "0.3"
hex = "0.4"
include_dir = "0.7"
libc = "0.2"
ratatui = "0.30"
rusqlite = { version = "0.39", features = ["bundled", "hooks", "modern_sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
toml = "1.1"
ureq = "3"
uuid = { version = "1.18", features = ["v4"] }
zip = { version = "6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23"
