[package]
name = "kast"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
flate2 = "1.1"
glamour = { package = "charmed-glamour", version = "0.2.0" }
glob = "0.3"
hex = "0.4"
libc = "0.2"
ratatui = "0.30"
rusqlite = { version = "0.39", features = ["bundled", "hooks", "modern_sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
tar = "0.4"
thiserror = "2.0"
toon-format = { version = "0.5.0", default-features = false }
toml = "1.1"
uuid = { version = "1.18", features = ["v4"] }
zip = { version = "6.0", default-features = false, features = ["deflate"] }
jsonschema = { version = "0.46.5", default-features = false }
indicatif = "0.18.4"
dialoguer = { version = "0.12.0", default-features = false }

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.23"
